2005-01-17  Rodrigo Moya <rodrigo@novell.com>

	* gui/calendar-component.c:
	* gui/calendar-offline-handler.c:
	* gui/comp-editor-factory.c:
	* gui/e-tasks.c:
	* gui/gnome-cal.c:
	* gui/misc.c:
	* gui/alarm-notify/alarm-notify.c: use libedataserver's e-url.

2005-01-17  Nat Friedman  <nat@novell.com>

	* gui/dialogs/url-editor-dialog.glade: Changed the title for the
	free/busy publishing settings dialog to "Free/Busy Publishing
	Settings" (away from "Free/Busy Editor" which made no sense).

2005-01-17  Rodrigo Moya <rodrigo@novell.com>

	* gui/e-calendar-view.c (on_unrecur_appointment): removed the
	e_day_view_... prefix in warning messages.

2005-01-17  Harish Krishnaswamy  <kharish@novell.com>

	* gui/dialogs/cal-attachment-bar.c (destroy):
	fixed a kludge.

2005-01-12  JP Rosevear  <jpr@novell.com>

	Fixes #65820
	
	* gui/weekday-picker.c (get_day_text): add translator comment

2005-01-08  Not Zed  <NotZed@Ximian.com>

	* gui/e-day-view.c (e_day_view_finish_resize): set
	last_Edited_comp_string to NULL, not test it for null.

2005-01-12  Harish Krishnaswamy  <kharish@novell.com>

	* gui/dialogs/cal-attachment-bar.c:
	(cal_attachment_bar_set_attachment_list):
	reverting the offset 'hyphen' fix - not required anymore.	

2005-01-10  Rodrigo Moya <rodrigo@novell.com>

	* gui/e-day-view.c (e_day_view_on_editing_stopped): remove the
	temporary object from the view when stopping editing.

	* gui/e-week-view.c (e_week_view_on_editing_stopped): ditto.
	
2005-01-10  Harish Krishnaswamy  <kharish@novell.com>

	* gui/dialogs/cal-attachment-bar.c:
	(cal_attachment_bar_set_attachment_list):
	offset the file name to account for the 'hyphen'.

2005-01-10  Chenthill Palanisamy <pchenthill@novell.com>

	* gui/dialogs/event-page.glade
	* gui/dialogs/task-page.glade: Showed the send options
	button and label. Hided the Send options Frame.

2005-01-10  Harish Krishnaswamy  <kharish@novell.com>

	* gui/dialogs/cal-attachment-bar.[ch]: (destroy), (init),