@@ -1,3 +1,9 @@
+2005-01-18  Harish Krishnaswamy  <kharish@novell.com>
+
+	* gui/dialogs/cal-attachment-bar.c 
+	(cal_attachment_bar_get_attachment_list): handle error conditions more
+	gracefully.
+
 2005-01-17  Rodrigo Moya <rodrigo@novell.com>
 
 	* gui/calendar-component.c:
